--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
 
   },
   "dependencies": {
-    "angular": "~1.2.19",
+    "angular": "1.2.19",
     "angular-route": "~1.2.17-build.163.1",
     "browser-sync": "~1.3.6",
     "browserify": "~5.10.1",
